# AI_PDF_Trans

./: .gitignore  README.md  build_exe.py  main.py  pyproject.toml  requirements.txt
docs/: ai_pdf_trans_change_log.md  ai_pdf_trans_current_changes.md
src/: app.py  locale.py
src/agent_runtime/: __init__.py  loop.py  prompts.py  tool_defs.py  tools.py
src/core/: tex_compiler.py
src/models/: config.py
src/pages/: settings_page.py  translate_page.py
src/server/: network.py  server.py  task_manager.py
src/utils/: crypto.py  file_utils.py  font_utils.py  logger.py  resources.py
tests/: conftest.py  test_agent_loop.py  test_tex_compiler.py  test_tools.py
