[project]
name = "ai-pdf-trans"
version = "0.1.0"
description = "AI-powered PDF translator preserving math, images, tables and layout"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.85.0",
    "litellm>=1.80.0",
    "pymupdf>=1.25.0",
    "pdfplumber>=0.11.0",
    "doclayout-yolo>=1.0.0",
    "jinja2>=3.1.0",
    "onnxruntime>=1.18.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
